# Persistencia_api

./: .env  .gitignore  CONSULTAS_COMPLEXAS.md  SEED_README.md  database.py  main.py  pyproject.toml  seed.py  verificar_dados.py
.claude/: settings.local.json
app/: database.py  main.py
app/models/: aluno.py  autor.py  emprestimo.py  livro.py
migrations/: env.py
migrations/versions/: 80939605affa_primeira_migracao_cria_tabelas_iniciais.py  a276d09ba5da_remocao_de_quantidade_em_livro.py  aaf32b36f210_alteracao_tipo_de_data_em_emprestimo_.py  d467f68aeec8_alteracao_tipo_de_data_em_emprestimo.py
models/: __init__.py  aluno.py  autor.py  emprestimo.py  livro.py  livro_autor_link.py
routes/: alunos.py  autores.py  emprestimos.py  estatisticas.py  home.py  livros.py
